# borreguil

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: docusaurus.config.ts  pnpm-lock.yaml  sidebars.ts
docs/docs/: installation.md  intro.md  quick-start.md
docs/docs/api/: contract.md  errors.md  provider.md  types.md  utils.md
examples/: erc20_balance.py
src/: contract.py  errors.py  provider.py
src/borreguil/: contract.py  errors.py  provider.py
src/borreguil/types/: provider.py
src/borreguil/utils/: abi_decoding.py  abi_encoding.py  blocks.py
src/tests/: test_provider.py
src/types/: provider.py
src/utils/: abi_encoding.py  blocks.py  crypto.py
tests/: test_abi_decoding.py  test_provider.py
