[project]
name = "web3o"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "orjson >= 3.10,<4",
    "eth-utils >= 6.0.0",
    "eth-typing >= 6.0.0",
    "pycryptodome",
]

[dependency-groups]
dev = [
    "ruff>=0.11",
    "ty>=0.0",
    "pytest>=8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
    "ASYNC",# flake8-async
    "C4",   # flake8-comprehensions
    "TCH",  # flake8-type-checking
]

[tool.ruff.lint.isort]
known-first-party = ["pyrpc"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.11"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pyright]
venvPath = "."
venv = ".venv"